AC_INIT
AM_INIT_AUTOMAKE(multi2sim, 3.0.2)
AM_PROG_AS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for header files.
AC_HEADER_STDBOOL
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/ioctl.h sys/time.h termios.h unistd.h float.h limits.h malloc.h stddef.h sys/socket.h utime.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_CHECK_MEMBERS([struct stat.st_blksize])
AC_STRUCT_ST_BLOCKS
AC_CHECK_MEMBERS([struct stat.st_rdev])
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_FUNC_CHOWN
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MMAP
AC_CHECK_FUNCS([alarm bzero ftruncate getcwd gettimeofday mkdir strncasecmp strcasecmp strndup strdup strstr memset munmap select socket strchr strtol utime])
AC_CHECK_LIB([pthread], [pthread_create], [LIBPTHREAD=true], [], [])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/libbio/Makefile
                 src/libcachesystem/Makefile
                 src/libdisasm/Makefile
                 src/libesim/Makefile
                 src/libfs/Makefile
                 src/libfs/bfs/Makefile
                 src/libfs/hostfs/Makefile
                 src/libgpudisasm/Makefile
                 src/libgpukernel/Makefile
                 src/libintr/Makefile
                 src/libm2skernel/Makefile
                 src/libmhandle/Makefile
                 src/libmisc/Makefile
                 src/libnetwork/Makefile
                 src/libopt/Makefile
                 src/libstruct/Makefile
                 src/libutils/Makefile])
AC_OUTPUT
