noinst_LTLIBRARIES = libnetwork.la
libnetwork_la_SOURCES = \
	network.h \
	network.c
AM_CFLAGS = -Wall

INCLUDES = -I$(top_srcdir)/src/libstruct \
	-I$(top_srcdir)/src/libmhandle \
	-I$(top_srcdir)/src/libesim \
	-I$(top_srcdir)/src/libopt \
	-I$(top_srcdir)/src/libesim \
	-I$(top_srcdir)/src/libmisc

ACLOCAL_AMFLAGS = -I m4
